--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@nuxtjs/bulma": "^1.2.1",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-js-modal": "^1.3.31"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
