--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.0.0",
+    "portal-vue": "^2.1.6",
     "vue-js-modal": "^1.3.31"
   },
   "devDependencies": {
