--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@crow1796/vue-bulma-tabs": "^1.0.8",
@@ -27,6 +28,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
+    "gh-pages": "^2.1.1",
     "nodemon": "^1.18.9",
     "vue-bulma-tabs": "^1.1.3"
   }
