--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.0.0",
+    "nuxt-lazy-load": "^1.2.5",
     "portal-vue": "^2.1.6",
     "vue-js-modal": "^1.3.31"
   },
@@ -26,7 +27,7 @@
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "gh-pages": "^2.1.1",
     "nodemon": "^1.18.9",
